# ml-foundations-cpp

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
data/: test_linear.csv
docs/: CMakeLists_notes.md  notes.md
docs/general/: action-plan.md  ml-foundations.md
docs/theory/: decision-tree.md  evaluation-metrics.md  feature-scaling.md  knn.md  linear-regression.md  logistic-regression.md  optimization-gd-sgd.md
include/ml/common/: activation_functions.hpp  csv_loader.hpp  data_split.hpp  dataset.hpp  distance_metrics.hpp  evaluation_metrics.hpp  feature_scaling.hpp  loss_functions.hpp  vector_ops.hpp
include/ml/decision_tree/: impurity_utils.hpp  split_utils.hpp  tree_node.hpp
include/ml/knn/: knn.hpp  knn_utils.hpp
include/ml/linear_regression/: linear_regression.hpp
include/ml/logistic_regression/: logistic_regression.hpp
src/common/: activation_functions.cpp  csv_loader.cpp  data_split.cpp  distance_metrics.cpp  evaluation_metrics.cpp  feature_scaling.cpp  loss_functions.cpp  vector_ops.cpp
src/decision_tree/: impurity_utils.cpp  split_utils.cpp
src/knn/: knn.cpp  knn_utils.cpp
src/linear_regression/: linear_regression.cpp
src/logistic_regression/: logistic_regression.cpp
